tests/snapshots/examples_fixtures/aoc__2025__aoc_day8_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day8_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `range`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:162:16
    |
162 |     let idxs = range(0, n)
    |                ^^^^^

Hint:
  Define it first: let range = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:164:5
    |
164 |     fold(idxs, [||], /(acc, i) -> {
    |     ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `range`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:170:20
    |
170 |     let parents0 = range(0, n)
    |                    ^^^^^

Hint:
  Define it first: let range = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:171:18
    |
171 |     let sizes0 = map(range(0, n), /_ -> 1)
    |                  ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:173:18
    |
173 |     let state1 = fold(sorted_keys, state0, /(st, k) -> union_key(st, k))
    |                  ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `range`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:181:16
    |
181 |     let idxs = range(0, n)
    |                ^^^^^

Hint:
  Define it first: let range = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:183:5
    |
183 |     fold(idxs, [||], /(acc, i) -> {
    |     ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `range`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:191:20
    |
191 |     let parents0 = range(0, n)
    |                    ^^^^^

Hint:
  Define it first: let range = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:192:18
    |
192 |     let sizes0 = map(range(0, n), /_ -> 1)
    |                  ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:194:18
    |
194 |     let state1 = fold(top_keys, state0, /(st, k) -> union_key(st, k))
    |                  ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `sort`.

  examples/aoc/2025/aoc_day8_haskell_style.flx:199:15
    |
199 |     let top = sort(comps, "desc")
    |               ^^^^

Hint:
  Define it first: let sort = ...;

Help:
  Did you mean one of: `sorted_keys`, `root`?

Found 11 errors.
== stdout ==
<not executed>
